tests/baselines/reference/parserMemberAccessorDeclaration9.errors.txt
parserMemberAccessorDeclaration9.ts(2,12): error TS1029: 'public' modifier must precede 'static' modifier.
parserMemberAccessorDeclaration9.ts(2,23): error TS2378: A 'get' accessor must return a value.


==== parserMemberAccessorDeclaration9.ts (2 errors) ====
    class C {
        static public get Foo() { }
               ~~~~~~
!!! error TS1029: 'public' modifier must precede 'static' modifier.
                          ~~~
!!! error TS2378: A 'get' accessor must return a value.
    }